[package]
name = "discorder"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
openssl = { version = "0.10.57", features = ["vendored"] }
reqwest = { version = "0.11.20", features = ["blocking", "json", "multipart"] }
yaml-rust = "0.4.5"
